internal/grammars/tron/tron_parser.go
// Code generated from TronParser.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // TronParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/wxio/goantlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "'syntax'", "", "", "", "", "", "'{'", "'}'", "", "'\"'", "'''",
	"", "':'", "'('", "')'", "'.'", "'['", "']'", "','", "'<'", "'>'", "'-'",
	"'+'",
}
var symbolicNames = []string{
	"", "PROTO3", "SYNTAX", "EQ_PRE", "ENDPRE", "PRE_WS", "PRE_COMMENT", "PRE_LINE_COMMENT",
	"LCUR", "RCUR", "EQ", "DQ", "SQ", "SEMI", "COLON", "LPAREN", "RPAREN",
	"DOT", "LSB", "RSB", "COMMA", "LCHEVR", "RCHEVR", "DASH", "PLUS", "STR",
	"ID", "INT", "FLT", "WS", "COMMENT", "LINE_COMMENT", "DOWN", "UP", "ROOT",
	"ERROR", "Import", "Package", "Option", "Extend", "Message", "Enum", "Service",
	"Oneof", "Map", "Field", "Repeated", "Reserved", "Rpc", "Keytype", "EnumValue",
	"EnumNum", "INF", "NAN", "MAX", "WEAK", "PUBLIC", "Returns", "Stream",
	"To", "TRUE", "FALSE",
}

var ruleNames = []string{
	"proto", "syntax", "top_level_statement", "msg_enum_svc_ext", "associaton",
	"left_assoc", "right_assoc", "fullname", "messageType", "rpcDelim", "ranges",
	"rangee", "fieldOptions", "fieldOption", "optionName", "constant", "constantObj",
	"constantObjElem",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type TronParser struct {
	*antlr.BaseParser
}

func NewTronParser(input antlr.TokenStream) *TronParser {
	this := new(TronParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "TronParser.g4"

	return this
}

// TronParser tokens.
const (
	TronParserEOF              = antlr.TokenEOF
	TronParserPROTO3           = 1
	TronParserSYNTAX           = 2
	TronParserEQ_PRE           = 3
	TronParserENDPRE           = 4
	TronParserPRE_WS           = 5
	TronParserPRE_COMMENT      = 6
	TronParserPRE_LINE_COMMENT = 7
	TronParserLCUR             = 8
	TronParserRCUR             = 9
	TronParserEQ               = 10
	TronParserDQ               = 11
	TronParserSQ               = 12
	TronParserSEMI             = 13
	TronParserCOLON            = 14
	TronParserLPAREN           = 15
	TronParserRPAREN           = 16
	TronParserDOT              = 17
	TronParserLSB              = 18
	TronParserRSB              = 19
	TronParserCOMMA            = 20
	TronParserLCHEVR           = 21
	TronParserRCHEVR           = 22
	TronParserDASH             = 23
	TronParserPLUS             = 24
	TronParserSTR              = 25
	TronParserID               = 26
	TronParserINT              = 27
	TronParserFLT              = 28
	TronParserWS               = 29
	TronParserCOMMENT          = 30
	TronParserLINE_COMMENT     = 31
	TronParserDOWN             = 32
	TronParserUP               = 33
	TronParserROOT             = 34
	TronParserERROR            = 35
	TronParserImport           = 36
	TronParserPackage          = 37
	TronParserOption           = 38
	TronParserExtend           = 39
	TronParserMessage          = 40
	TronParserEnum             = 41
	TronParserService          = 42
	TronParserOneof            = 43
	TronParserMap              = 44
	TronParserField            = 45
	TronParserRepeated         = 46
	TronParserReserved         = 47
	TronParserRpc              = 48
	TronParserKeytype          = 49
	TronParserEnumValue        = 50
	TronParserEnumNum          = 51
	TronParserINF              = 52
	TronParserNAN              = 53
	TronParserMAX              = 54
	TronParserWEAK             = 55
	TronParserPUBLIC           = 56
	TronParserReturns          = 57
	TronParserStream           = 58
	TronParserTo               = 59
	TronParserTRUE             = 60
	TronParserFALSE            = 61
)

// TronParser rules.
const (
	TronParserRULE_proto               = 0
	TronParserRULE_syntax              = 1
	TronParserRULE_top_level_statement = 2
	TronParserRULE_msg_enum_svc_ext    = 3
	TronParserRULE_associaton          = 4
	TronParserRULE_left_assoc          = 5
	TronParserRULE_right_assoc         = 6
	TronParserRULE_fullname            = 7
	TronParserRULE_messageType         = 8
	TronParserRULE_rpcDelim            = 9
	TronParserRULE_ranges              = 10
	TronParserRULE_rangee              = 11
	TronParserRULE_fieldOptions        = 12
	TronParserRULE_fieldOption         = 13
	TronParserRULE_optionName          = 14
	TronParserRULE_constant            = 15
	TronParserRULE_constantObj         = 16
	TronParserRULE_constantObjElem     = 17
)

// IProtoContext is an interface to support dynamic dispatch.
type IProtoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProtoContext differentiates from other interfaces.
	IsProtoContext()
}

type ProtoContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProtoContext() *ProtoContext {
	var p = new(ProtoContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TronParserRULE_proto
	return p
}

func (*ProtoContext) IsProtoContext() {}

func NewProtoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProtoContext {
	var p = new(ProtoContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TronParserRULE_proto

	return p
}

func (s *ProtoContext) GetParser() antlr.Parser { return s.parser }

func (s *ProtoContext) EOF() antlr.TerminalNode {
	return s.GetToken(TronParserEOF, 0)
}

func (s *ProtoContext) Syntax() ISyntaxContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISyntaxContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISyntaxContext)
}

func (s *ProtoContext) AllTop_level_statement() []ITop_level_statementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITop_level_statementContext)(nil)).Elem())
	var tst = make([]ITop_level_statementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITop_level_statementContext)
		}
	}

	return tst
}

func (s *ProtoContext) Top_level_statement(i int) ITop_level_statementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITop_level_statementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITop_level_statementContext)
}

func (s *ProtoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProtoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProtoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.EnterProto(s)
	}
}

func (s *ProtoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.ExitProto(s)
	}
}

func (p *TronParser) Proto() (localctx IProtoContext) {
	localctx = NewProtoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TronParserRULE_proto)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == TronParserSYNTAX {
		{
			p.SetState(36)
			p.Syntax()
		}

	}
	p.SetState(42)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == TronParserSEMI || _la == TronParserID {
		{
			p.SetState(39)
			p.Top_level_statement()
		}

		p.SetState(44)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(45)
		p.Match(TronParserEOF)
	}

	return localctx
}

// ISyntaxContext is an interface to support dynamic dispatch.
type ISyntaxContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSyntaxContext differentiates from other interfaces.
	IsSyntaxContext()
}

type SyntaxContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySyntaxContext() *SyntaxContext {
	var p = new(SyntaxContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TronParserRULE_syntax
	return p
}

func (*SyntaxContext) IsSyntaxContext() {}

func NewSyntaxContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SyntaxContext {
	var p = new(SyntaxContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TronParserRULE_syntax

	return p
}

func (s *SyntaxContext) GetParser() antlr.Parser { return s.parser }

func (s *SyntaxContext) SYNTAX() antlr.TerminalNode {
	return s.GetToken(TronParserSYNTAX, 0)
}

func (s *SyntaxContext) EQ_PRE() antlr.TerminalNode {
	return s.GetToken(TronParserEQ_PRE, 0)
}

func (s *SyntaxContext) PROTO3() antlr.TerminalNode {
	return s.GetToken(TronParserPROTO3, 0)
}

func (s *SyntaxContext) ENDPRE() antlr.TerminalNode {
	return s.GetToken(TronParserENDPRE, 0)
}

func (s *SyntaxContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SyntaxContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SyntaxContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.EnterSyntax(s)
	}
}

func (s *SyntaxContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.ExitSyntax(s)
	}
}

func (p *TronParser) Syntax() (localctx ISyntaxContext) {
	localctx = NewSyntaxContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TronParserRULE_syntax)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(47)
		p.Match(TronParserSYNTAX)
	}
	{
		p.SetState(48)
		p.Match(TronParserEQ_PRE)
	}
	{
		p.SetState(49)
		p.Match(TronParserPROTO3)
	}
	{
		p.SetState(50)
		p.Match(TronParserENDPRE)
	}

	return localctx
}

// ITop_level_statementContext is an interface to support dynamic dispatch.
type ITop_level_statementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTop_level_statementContext differentiates from other interfaces.
	IsTop_level_statementContext()
}

type Top_level_statementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTop_level_statementContext() *Top_level_statementContext {
	var p = new(Top_level_statementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TronParserRULE_top_level_statement
	return p
}

func (*Top_level_statementContext) IsTop_level_statementContext() {}

func NewTop_level_statementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Top_level_statementContext {
	var p = new(Top_level_statementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TronParserRULE_top_level_statement

	return p
}

func (s *Top_level_statementContext) GetParser() antlr.Parser { return s.parser }

func (s *Top_level_statementContext) CopyFrom(ctx *Top_level_statementContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *Top_level_statementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Top_level_statementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type OptionFileDefContext struct {
	*Top_level_statementContext
	opt antlr.Token
}

func NewOptionFileDefContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *OptionFileDefContext {
	var p = new(OptionFileDefContext)

	p.Top_level_statementContext = NewEmptyTop_level_statementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Top_level_statementContext))

	return p
}

func (s *OptionFileDefContext) GetOpt() antlr.Token { return s.opt }

func (s *OptionFileDefContext) SetOpt(v antlr.Token) { s.opt = v }

func (s *OptionFileDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OptionFileDefContext) OptionName() IOptionNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOptionNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOptionNameContext)
}

func (s *OptionFileDefContext) EQ() antlr.TerminalNode {
	return s.GetToken(TronParserEQ, 0)
}

func (s *OptionFileDefContext) Constant() IConstantContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConstantContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConstantContext)
}

func (s *OptionFileDefContext) SEMI() antlr.TerminalNode {
	return s.GetToken(TronParserSEMI, 0)
}

func (s *OptionFileDefContext) ID() antlr.TerminalNode {
	return s.GetToken(TronParserID, 0)
}

func (s *OptionFileDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.EnterOptionFileDef(s)
	}
}

func (s *OptionFileDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.ExitOptionFileDef(s)
	}
}

type Ext_Msg_Enum_SvcContext struct {
	*Top_level_statementContext
	mese antlr.Token
	_ID  antlr.Token
	a    []antlr.Token
}

func NewExt_Msg_Enum_SvcContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *Ext_Msg_Enum_SvcContext {
	var p = new(Ext_Msg_Enum_SvcContext)

	p.Top_level_statementContext = NewEmptyTop_level_statementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Top_level_statementContext))

	return p
}

func (s *Ext_Msg_Enum_SvcContext) GetMese() antlr.Token { return s.mese }

func (s *Ext_Msg_Enum_SvcContext) Get_ID() antlr.Token { return s._ID }

func (s *Ext_Msg_Enum_SvcContext) SetMese(v antlr.Token) { s.mese = v }

func (s *Ext_Msg_Enum_SvcContext) Set_ID(v antlr.Token) { s._ID = v }

func (s *Ext_Msg_Enum_SvcContext) GetA() []antlr.Token { return s.a }

func (s *Ext_Msg_Enum_SvcContext) SetA(v []antlr.Token) { s.a = v }

func (s *Ext_Msg_Enum_SvcContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Ext_Msg_Enum_SvcContext) LCUR() antlr.TerminalNode {
	return s.GetToken(TronParserLCUR, 0)
}

func (s *Ext_Msg_Enum_SvcContext) RCUR() antlr.TerminalNode {
	return s.GetToken(TronParserRCUR, 0)
}

func (s *Ext_Msg_Enum_SvcContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(TronParserID)
}

func (s *Ext_Msg_Enum_SvcContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(TronParserID, i)
}

func (s *Ext_Msg_Enum_SvcContext) AllMsg_enum_svc_ext() []IMsg_enum_svc_extContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMsg_enum_svc_extContext)(nil)).Elem())
	var tst = make([]IMsg_enum_svc_extContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMsg_enum_svc_extContext)
		}
	}

	return tst
}

func (s *Ext_Msg_Enum_SvcContext) Msg_enum_svc_ext(i int) IMsg_enum_svc_extContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMsg_enum_svc_extContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMsg_enum_svc_extContext)
}

func (s *Ext_Msg_Enum_SvcContext) AllDOT() []antlr.TerminalNode {
	return s.GetTokens(TronParserDOT)
}

func (s *Ext_Msg_Enum_SvcContext) DOT(i int) antlr.TerminalNode {
	return s.GetToken(TronParserDOT, i)
}

func (s *Ext_Msg_Enum_SvcContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.EnterExt_Msg_Enum_Svc(s)
	}
}

func (s *Ext_Msg_Enum_SvcContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.ExitExt_Msg_Enum_Svc(s)
	}
}

type ImportStatementContext struct {
	*Top_level_statementContext
	imp          antlr.Token
	weakORpublic antlr.Token
	b            antlr.Token
}

func NewImportStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ImportStatementContext {
	var p = new(ImportStatementContext)

	p.Top_level_statementContext = NewEmptyTop_level_statementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Top_level_statementContext))

	return p
}

func (s *ImportStatementContext) GetImp() antlr.Token { return s.imp }

func (s *ImportStatementContext) GetWeakORpublic() antlr.Token { return s.weakORpublic }

func (s *ImportStatementContext) GetB() antlr.Token { return s.b }

func (s *ImportStatementContext) SetImp(v antlr.Token) { s.imp = v }

func (s *ImportStatementContext) SetWeakORpublic(v antlr.Token) { s.weakORpublic = v }

func (s *ImportStatementContext) SetB(v antlr.Token) { s.b = v }

func (s *ImportStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportStatementContext) SEMI() antlr.TerminalNode {
	return s.GetToken(TronParserSEMI, 0)
}

func (s *ImportStatementContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(TronParserID)
}

func (s *ImportStatementContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(TronParserID, i)
}

func (s *ImportStatementContext) STR() antlr.TerminalNode {
	return s.GetToken(TronParserSTR, 0)
}

func (s *ImportStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.EnterImportStatement(s)
	}
}

func (s *ImportStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.ExitImportStatement(s)
	}
}

type EmptyStmContext struct {
	*Top_level_statementContext
}

func NewEmptyStmContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *EmptyStmContext {
	var p = new(EmptyStmContext)

	p.Top_level_statementContext = NewEmptyTop_level_statementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Top_level_statementContext))

	return p
}

func (s *EmptyStmContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EmptyStmContext) SEMI() antlr.TerminalNode {
	return s.GetToken(TronParserSEMI, 0)
}

func (s *EmptyStmContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.EnterEmptyStm(s)
	}
}

func (s *EmptyStmContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.ExitEmptyStm(s)
	}
}

type PackageStatementContext struct {
	*Top_level_statementContext
	pkg antlr.Token
	_ID antlr.Token
	a   []antlr.Token
}

func NewPackageStatementContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *PackageStatementContext {
	var p = new(PackageStatementContext)

	p.Top_level_statementContext = NewEmptyTop_level_statementContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Top_level_statementContext))

	return p
}

func (s *PackageStatementContext) GetPkg() antlr.Token { return s.pkg }

func (s *PackageStatementContext) Get_ID() antlr.Token { return s._ID }

func (s *PackageStatementContext) SetPkg(v antlr.Token) { s.pkg = v }

func (s *PackageStatementContext) Set_ID(v antlr.Token) { s._ID = v }

func (s *PackageStatementContext) GetA() []antlr.Token { return s.a }

func (s *PackageStatementContext) SetA(v []antlr.Token) { s.a = v }

func (s *PackageStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PackageStatementContext) SEMI() antlr.TerminalNode {
	return s.GetToken(TronParserSEMI, 0)
}

func (s *PackageStatementContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(TronParserID)
}

func (s *PackageStatementContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(TronParserID, i)
}

func (s *PackageStatementContext) AllDOT() []antlr.TerminalNode {
	return s.GetTokens(TronParserDOT)
}

func (s *PackageStatementContext) DOT(i int) antlr.TerminalNode {
	return s.GetToken(TronParserDOT, i)
}

func (s *PackageStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.EnterPackageStatement(s)
	}
}

func (s *PackageStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronParserListener); ok {
		listenerT.ExitPackageStatement(s)
	}
}

func (p *TronParser) Top_level_statement() (localctx ITop_level_statementContext) {
	localctx = NewTop_level_statementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TronParserRULE_top_level_statement)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(92)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext()) {
	case 1:
		localctx = NewImportStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(52)

			var _m = p.Match(TronParserID)

			localctx.(*ImportStatementContext).imp = _m
		}
		p.SetState(54)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == TronParserID {
			{
				p.SetState(53)

				var _m = p.Match(TronParserID)

				localctx.(*ImportStatementContext).weakORpublic = _m
			}

		}
		{
			p.SetState(56)

			var _m = p.Match(TronParserSTR)

			localctx.(*ImportStatementContext).b = _m
		}
		{
			p.SetState(57)
			p.Match(TronParserSEMI)
		}

	case 2:
		localctx = NewPackageStatementContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(58)

			var _m = p.Match(TronParserID)

			localctx.(*PackageStatementContext).pkg = _m
		}
		{
			p.SetState(59)

			var _m = p.Match(TronParserID)

			localctx.(*PackageStatementContext)._ID = _m
		}
		localctx.(*PackageStatementContext).a = append(localctx.(*PackageStatementContext).a, localctx.(*PackageStatementContext)._ID)
		p.SetState(64)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == TronParserDOT {
			{
				p.SetState(60)
				p.Match(TronParserDOT)
			}
			{
				p.SetState(61)

				var _m = p.Match(TronParserID)

				localctx.(*PackageStatementContext)._ID = _m
			}
			localctx.(*PackageStatementContext).a = append(localctx.(*PackageStatementContext).a, localctx.(*PackageStatementContext)._ID)

			p.SetState(66)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(67)
			p.Match(TronParserSEMI)
		}

	case 3:
		localctx = NewOptionFileDefContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(68)

			var _m = p.Match(TronParserID)

			localctx.(*OptionFileDefContext).opt = _m
		}
		{
			p.SetState(69)
			p.OptionName()
		}
		{
			p.SetState(70)
			p.Match(TronParserEQ)
		}
		{
			p.SetState(71)
			p.Constant()
		}
		{
			p.SetState(72)
			p.Match(TronParserSEMI)
		}

	case 4:
		localctx = NewExt_Msg_Enum_SvcContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(74)

			var _m = p.Match(TronParserID)

			localctx.(*Ext_Msg_Enum_SvcContext).mese = _m
		}

		{
			p.SetState(75)

			var _m = p.Match(TronParserID)

			localctx.(*Ext_Msg_Enum_SvcContext)._ID = _m
		}
		localctx.(*Ext_Msg_Enum_SvcContext).a = append(localctx.(*Ext_Msg_Enum_SvcContext).a, localctx.(*Ext_Msg_Enum_SvcContext)._ID)
		p.SetState(80)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == TronParserDOT {
			{
				p.SetState(76)
				p.Match(TronParserDOT)
			}
			{
				p.SetState(77)

				var _m = p.Match(TronParserID)

				localctx.(*Ext_Msg_Enum_SvcContext)._ID = _m
			}
			localctx.(*Ext_Msg_Enum_SvcContext).a = append(localctx.(*Ext_Msg_Enum_SvcContext).a, localctx.(*Ext_Msg_Enum_SvcContext)._ID)

			p.SetState(82)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

		{
			p.SetState(83)
			p.Match(TronParserLCUR)
		}
		p.SetState(87)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<TronParserSEMI)|(1<<TronParserDOT)|(1<<TronParserID))) != 0 {
			{
				p.SetState(84)
				p.Msg_enum_svc_ext()
			}
